# notebrowser

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
example/: notebrowser.yml
example/assets/css/: style.css
example/notes/: example_note.md
example/records/: example_note.md  example_session.md  npcs.yml  pcs.yml  records.yml  records2.yml
example/records/locations/: alcatrazcaban.yml  crab-habor.yml  greater-red-cliff.yml  points-west.yml
example/records/notes/: previous-thoughts.md  thoughts.md
example/records/sessions/: 2020-11-13-session-log.md  2020-12-04-session-log.md
example/sessions/: example_session.md
notebrowser/: __init__.py  __main__.py  building.py  campaigndata.py  cli.py  configuration.py  loading.py  records.py  rendering.py  sitedata.py  uri.py
notebrowser/assets/: __init__.py  style.css
notebrowser/assets/fonts/: __init__.py
notebrowser/templates/: __init__.py  homepage.html  homepage.html.jinja  page.html  page.html.jinja  record_page.html  record_page.html.jinja  style.css  textrecord_page.html  textrecord_page.html.jinja
tests/: test_loading.py  test_uri.py
