[tool.poetry]
name = "notebrowser"
version = "0.1.0"
description = "Generate a static website for browsing your notes."
authors = ["Daniel P. Rice <daniel.paul.rice@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"
dacite = "^1.6.0"
python-frontmatter = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
